--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.0",
     "date-fns": "^2.28.0",
+    "dateformat": "^5.0.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-date-range": "^1.4.0",
