--- a/firebase.json
+++ b/firebase.json
@@ -1,15 +1,12 @@
 {
   "hosting": {
+    "site": "myproject",
     "public": "build",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/public/index.html"
       }
     ]
   }
